test/files/neg/t556.check
t556.scala:3: error: wrong number of parameters; expected one
  def g:Int = f((x,y)=>x)
                     ^
one error found
